syntax = "proto3";

package platform;

message PolarPosition {
    //use the system of polar coordinates
    double distance=1;
    double angle=2;
}

message XYPosition {
    //use the system of rectangular coordinates
    double x=1;
    double y=2;
}

message Object {
    //object like tree, wall, etc.
    enum ObjectType {
        WALL=0;
        TREE=1;
    }
    enum ObjectShape {
        CIRCLE=0;
        RECTANGLE=1;
    }
    PolarPosition pos=1;
    double radius=2;
    ObjectType type=3;
    ObjectShape shape=4;
}

message Item {
    //items like gun, etc.
    enum ItemType {
        WEAPON=0;
        GOODS=1;
    }
    int32 item_ID=1;
    ItemType type=2;
    PolarPosition pos=3;
    int32 durability=4;
}

enum PlayerState {
    RELAX = 0;
    ON_PLANE = 1;
    JUMPING = 2;
    MOVING = 3;
    SHOOTING = 4;
    PICKUP = 5;
}
enum Vocation {
    MEDIC = 0;
    ENGINEER = 1;
    SIGNALMAN = 2;
    HACK = 3;
    SNIPER = 4;
}
message SelfInfo {
    //complete info of self
    int32 heal_point=1;
    int32 heal_point_limit=2;
    double move_angle=3;
    double view_angle=4;
    double move_speed=5;
    Vocation vocation=6;
    PlayerState state=7;
    int32 state_cd=8;
    XYPosition pos=9;
    repeated Item bag=10;
}

message OtherInfo {
    //basic info of other characters in visual field
    int32 player_ID=1;
    PlayerState state=2;
    double move_angle=3;
    double view_angle=4;
    double move_speed=5;
    PolarPosition pos=6;
}

message Sound {
    enum SoundType {
        FOOTSTEP_SOUND = 0;
        GUN_SOUND = 1;
        RADIO_VOICE = 2;
    }
    int32 sender_ID=1;
    int32 time_delay=2;
    SoundType type=3;
    int32 parameter=4;
}

message PlayerInfo {
    //all info that send to each player per turn
    SelfInfo self_info=1;
    repeated Object objects=2;
    repeated Item items=3;
    repeated OtherInfo others=4;
    repeated Sound sounds=5;
}

message TeamInfo {
    //4 PlayerInfo in general
    repeated PlayerInfo infos=1;
}